# cajachoca

./: COMPILE_WINDOWS_GUIDE.txt  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  windows-cert-config.txt
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: backup_service.rs  mod.rs  report_service.rs  session_service.rs  transaction_service.rs
src-tauri/wix/: fragment.wxs  template.wxs
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/modals/: TransactionModal.tsx
src/components/ui/: button.tsx
src/lib/: api.ts
src/pages/: Caja.tsx  Categorias.tsx  Configuracion.tsx  Dashboard.tsx  Historial.tsx  Reportes.tsx  StartSession.tsx
src/stores/: configStore.ts  sessionStore.ts
