[package]
name = "cajachoca"
version = "0.1.0"
description = "Sistema de Caja Chica para Cafetería"
authors = ["Cafetería Hub"]
edition = "2021"

[lib]
name = "cajachoca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
once_cell = "1.20"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
